[package]
name = "tgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tca-rs = "0.1.0"
anyhow = "1.0.82"
async-trait = "0.1.80"
better-panic = "0.3.0"
chatgpt_rs = { path = "../chatgpt_rs", features = ["streams"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.0", features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.30"
human-panic = "2.0.0"
libc = "0.2.155"
log = "0.4.21"
ratatui = { version = "0.28.0", features = ["all-widgets", "unstable-rendered-line-info"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.116"
simplelog = "0.12.2"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.38.0", features = ["full"] }
trace = "0.1.7"
tui-scrollview = "0.4.0"
tui-textarea = "0.6.1"
syntect = "5.2.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
markdown = "1.0.0-alpha.20"
derive-new = "0.7.0"
clipboard = "0.5.0"
objc = "0.2.7"
cocoa = "0.26.0"
